--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest-extended": "^0.11.5",
     "msw": "^0.28.2",
     "npm-run-all": "^4.1.5",
+    "return-style": "^0.12.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
     "rollup-plugin-analyzer": "^4.0.0",
