--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
+    "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
     "test": "jest --no-cache --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
@@ -22,9 +23,7 @@
     "clean:build": "rimraf lib",
     "clean:bundle": "rimraf dist",
     "build": "run-p build:*",
-    "build:es2020": "run-s build:es2020:*",
-    "build:es2020:compile": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib/es2020",
-    "build:es2020:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib/es2020",
+    "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib/es2020",
     "bundle": "rollup --config rollup.config.js",
     "release": "standard-version"
   },
@@ -58,9 +57,10 @@
     "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.3.1",
     "ts-jest": "^27.0.5",
-    "tscpaths": "^0.0.9",
+    "ts-patch": "^1.4.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "@blackglory/errors": "^1.1.1",
