--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "run-s lint test",
+      "pre-commit": "run-s prepare lint test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
